small UI alignment fix

--- a/src/styles/CompanyDetailsDialog.module.css
+++ b/src/styles/CompanyDetailsDialog.module.css
@@ -22,3 +22,10 @@
 .link {
     color: inherit;
 }
+
+.loadingContainer {
+    flex: 1;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
